--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
         "body-parser": "^2.2.0",
         "cors": "^2.8.5",
         "express": "^5.1.0"
+    },
+    "devDependencies": {
+        "@types/express": "^5.0.2"
     }
 }
