--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "express": "^5.1.0"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.18",
         "@types/express": "^5.0.2"
     }
 }
