--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dependencies": {
         "body-parser": "^2.2.0",
         "cors": "^2.8.5",
-        "express": "^5.1.0"
+        "express": "^5.1.0",
+        "socket.io": "^4.8.1"
     },
     "devDependencies": {
         "@types/cors": "^2.8.18",
